--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
 
+build
+
 # Prerequisites
 *.d
 
@@ -53,6 +55,8 @@ external/glm/**
 !external/glm/.keep
 external/imgui/**
 !external/imgui/.keep
+external/json/**
+!external/json/.keep
 
 # imgui
 imgui.ini
