add test framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(SDL2 REQUIRED)
 # Include directories for external libraries
 include_directories(include/ ${OPENGL_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS} external/imgui external/glm)
 
+# SDL2 and OpenGL libraries
 set(IMGUI_SOURCES
     external/imgui/imgui.cpp
     external/imgui/imgui_draw.cpp
@@ -21,7 +22,7 @@ set(IMGUI_SOURCES
     external/imgui/backends/imgui_impl_opengl3.cpp
 )
 
-file(GLOB SOURCES src/*.cpp Main.cpp)
+file(GLOB SOURCES src/*.cpp src/tests/*.cpp)
 
 # Disable tests and installation for nlohmann_json
 set(JSON_BuildTests OFF CACHE INTERNAL "")
@@ -30,7 +31,7 @@ set(JSON_Install OFF CACHE INTERNAL "")
 # Add nlohmann_json subdirectory
 add_subdirectory(external/json)
 
-add_executable(playground.app ${SOURCES} ${IMGUI_SOURCES})
+add_executable(playground.app Main.cpp ${SOURCES} ${IMGUI_SOURCES})
 
 # Link libraries
 target_link_libraries(playground.app ${OPENGL_LIBRARIES} ${SDL2_LIBRARIES} GLEW nlohmann_json::nlohmann_json)
