--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,8 @@ assets/**
 !assets/gltf_duck/**
 !assets/skybox/
 !assets/skybox/**
+!assets/textures/
+!assets/textures/test0.png
 
 # imgui
 imgui.ini
